(menhir
 ;  (flags --explain --dump-resolved)
 (modules parser))

(ocamllex lexer)

(library
 (name mybuild_parser)
 (wrapped false)
 ;  (public_name caravan.mybuild_pars1er)
 (libraries core)
 (modules parser lexer ast parselib)
 (preprocess
  (pps ppx_deriving.show)))

(executable
 (name parse)
 (public_name caravan.mybuild_parser.parse)
 (modules parse)
 (libraries mybuild_parser core core_unix.command_unix))
